--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -28,11 +28,11 @@
                <VBox.margin>
                   <Insets />
                </VBox.margin></Button>
-            <Button fx:id="startButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Start Game">
+            <Button fx:id="startButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playTurn" prefHeight="30.0" prefWidth="110.0" text="Start Game">
                <VBox.margin>
                   <Insets />
                </VBox.margin></Button>
-            <Button fx:id="moveButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
+            <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
                <VBox.margin>
                   <Insets />
                </VBox.margin></Button>
@@ -46,28 +46,13 @@
    <center>
       <ScrollPane fx:id="boardScrollPane" minHeight="10.0" minWidth="20.0" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <content>
-            <GridPane alignment="CENTER" hgap="5.0" vgap="5.0">
+            <GridPane fx:id="boardPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="33.0" prefWidth="58.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
-               <children>
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-               </children>
             </GridPane>
          </content></ScrollPane>
    </center>
@@ -78,31 +63,31 @@
                <children>
                   <ScrollPane layoutX="-1.0" prefHeight="176.0" prefWidth="159.0">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="175.0" prefWidth="159.0">
+                      <AnchorPane>
                            <children>
-                              <Label prefWidth="101.0" text="Turn No." />
-                              <Label layoutX="59.0" text="0" />
-                              <Label fx:id="player1" layoutY="16.0" text="Player" />
-                              <Label fx:id="NotAviable" layoutX="49.0" layoutY="16.0" text="N/A" />
-                              <Label fx:id="player2" layoutY="38.0" styleClass="task-message-label" text=" " />
-                              <Label fx:id="player4" layoutY="64.0" text=" " />
-                              <Label fx:id="player5" layoutY="85.0" text=" " />
-                              <Label fx:id="player6" layoutY="103.0" text=" " />
-                              <Label fx:id="player3" layoutX="2.0" layoutY="125.0" text=" " />
+                              <Label layoutY="31.0" prefWidth="101.0" text="Turn No." />
+                              <Label fx:id="turnNumber" layoutX="59.0" layoutY="31.0" text="0" />
+                              <Label fx:id="player1" layoutX="5.0" layoutY="52.0" text="Player" />
+                              <Label fx:id="NotAviable" layoutX="50.0" layoutY="52.0" text="N/A" />
+                              <Label fx:id="titlePlayerData" layoutX="8.0" layoutY="4.0" underline="true" />
                            </children>
-                        </AnchorPane>
+                      </AnchorPane>
                     </content>
                   </ScrollPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane>
                <children>
-                  <ScrollPane layoutX="-29.0" layoutY="35.0" prefHeight="200.0" prefWidth="200.0">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                    </content>
+                  <ScrollPane layoutX="1.0" layoutY="5.0" prefHeight="200.0" prefWidth="156.0">
+                     <content>
+                      <AnchorPane>
+                           <children>
+                              <Label fx:id="initInfoGame" layoutY="33.0" />
+                              <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
+                           </children>
+                        </AnchorPane>
+                     </content>
                   </ScrollPane>
-                  <Label layoutX="14.0" layoutY="14.0" text="Player Words" />
                </children>
             </AnchorPane>
         </items>
