--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="241" minWidth="500" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
+<BorderPane minHeight="249" minWidth="530" prefHeight="408.0" prefWidth="614.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
    <top>
       <Label text="Wordiada" BorderPane.alignment="CENTER">
          <font>
@@ -46,50 +46,42 @@
    <center>
       <ScrollPane fx:id="boardScrollPane" minHeight="10.0" minWidth="20.0" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <content>
-            <GridPane fx:id="boardPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="33.0" prefWidth="58.0">
+            <GridPane fx:id="boardPane">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
          </content></ScrollPane>
    </center>
    <right>
-      <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-               <children>
-                  <ScrollPane layoutX="-1.0" prefHeight="176.0" prefWidth="159.0">
-                    <content>
-                      <AnchorPane>
-                           <children>
-                              <Label layoutY="31.0" prefWidth="101.0" text="Turn No." />
-                              <Label fx:id="turnNumber" layoutX="59.0" layoutY="31.0" text="0" />
-                              <Label fx:id="player1" layoutX="5.0" layoutY="52.0" text="Player" />
-                              <Label fx:id="NotAviable" layoutX="50.0" layoutY="52.0" text="N/A" />
-                              <Label fx:id="titlePlayerData" layoutX="8.0" layoutY="4.0" underline="true" />
-                           </children>
-                      </AnchorPane>
-                    </content>
-                  </ScrollPane>
-               </children>
-            </AnchorPane>
-          <AnchorPane>
-               <children>
-                  <ScrollPane layoutX="1.0" layoutY="5.0" prefHeight="200.0" prefWidth="156.0">
-                     <content>
-                      <AnchorPane>
-                           <children>
-                              <Label fx:id="initInfoGame" layoutY="33.0" />
-                              <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </ScrollPane>
-               </children>
-            </AnchorPane>
+            <ScrollPane layoutX="-1.0">
+                <content>
+                    <AnchorPane>
+                        <children>
+                            <Label layoutY="31.0" prefWidth="101.0" text="Turn No." />
+                            <Label fx:id="turnNumber" layoutX="59.0" layoutY="31.0" text="0" />
+                            <Label fx:id="player1" layoutX="5.0" layoutY="52.0" text="Player" />
+                            <Label fx:id="NotAviable" layoutX="50.0" layoutY="52.0" text="N/A" />
+                            <Label fx:id="titlePlayerData" layoutX="8.0" layoutY="4.0" underline="true" />
+                        </children>
+                    </AnchorPane>
+                </content>
+            </ScrollPane>
+            <ScrollPane layoutX="1.0" layoutY="5.0">
+                <content>
+                    <AnchorPane>
+                        <children>
+                            <Label fx:id="initInfoGame" layoutY="33.0" />
+                            <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
+                        </children>
+                    </AnchorPane>
+                </content>
+            </ScrollPane>
         </items>
       </SplitPane>
    </right>
