--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="241" minWidth="500" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
+<BorderPane minHeight="541.0" minWidth="800.0" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
    <top>
       <Label text="Wordiada" BorderPane.alignment="CENTER">
          <font>
@@ -57,11 +57,11 @@
          </content></ScrollPane>
    </center>
    <right>
-      <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="360.0" prefWidth="227.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <ScrollPane layoutX="-1.0" prefHeight="176.0" prefWidth="159.0">
+                  <ScrollPane layoutX="-1.0" prefHeight="146.0" prefWidth="227.0">
                     <content>
                       <AnchorPane>
                            <children>
@@ -78,7 +78,7 @@
             </AnchorPane>
           <AnchorPane>
                <children>
-                  <ScrollPane layoutX="1.0" layoutY="5.0" prefHeight="200.0" prefWidth="156.0">
+                  <ScrollPane layoutX="-2.0" layoutY="-1.0" prefHeight="206.0" prefWidth="228.0">
                      <content>
                       <AnchorPane>
                            <children>
