--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -24,77 +24,65 @@
    </top>
    <left>
       <VBox fx:id="buttonsVBox" alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="130.0" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="loadXmlButton" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loadXmlFile" prefHeight="30.0" prefWidth="110.0" text="Load XML">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Button>
-            <Button fx:id="startButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playTurn" prefHeight="30.0" prefWidth="110.0" text="Start Game">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </Button><Button fx:id="diceButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#throwDie" prefHeight="30.0" prefWidth="110.0" text="Throw Die">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Button>
-            <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></Button>
-            <Button fx:id="exitButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Exit">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </Button>
-         </children></VBox>
+        <Button fx:id="loadXmlButton" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loadXmlFile" prefHeight="30.0" prefWidth="110.0" text="Load XML">
+           <VBox.margin>
+              <Insets />
+           </VBox.margin></Button>
+        <Button fx:id="startButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playTurn" prefHeight="30.0" prefWidth="110.0" text="Start Game">
+           <VBox.margin>
+              <Insets />
+           </VBox.margin>
+        </Button><Button fx:id="diceButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#throwDie" prefHeight="30.0" prefWidth="110.0" text="Throw Die">
+           <VBox.margin>
+              <Insets />
+           </VBox.margin></Button>
+        <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
+           <VBox.margin>
+              <Insets />
+           </VBox.margin></Button>
+        <Button fx:id="exitButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Exit">
+           <VBox.margin>
+              <Insets />
+           </VBox.margin>
+        </Button>
+      </VBox>
    </left>
    <center>
       <ScrollPane fx:id="boardScrollPane" minHeight="10.0" minWidth="20.0" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
-         <content>
-            <GridPane fx:id="boardPane">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-         </content></ScrollPane>
+        <GridPane fx:id="boardPane">
+          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
+      </ScrollPane>
    </center>
    <right>
       <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="360.0" prefWidth="227.0" BorderPane.alignment="CENTER">
-        <items>
-            <ScrollPane layoutX="-1.0">
-                <content>
-                    <VBox fx:id="playerVBox">
-                        <children>
-                            <Label fx:id="titlePlayerData" underline="true">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
-                            <HBox>
-                                <Label layoutY="31.0" prefWidth="50.0" text="Turn No." />
-                                <Label fx:id="turnNumber" text="0" />
-                            </HBox>
-                            <HBox>
-                                <Label fx:id="player1" text="Player" />
-                                <Label fx:id="NotAviable" text="N/A" />
-                            </HBox>
-                        </children>
-                    </VBox>
-                </content>
-            </ScrollPane>
-            <ScrollPane layoutX="1.0" layoutY="5.0">
-                <content>
-                    <AnchorPane>
-                        <children>
-                            <Label fx:id="initInfoGame" layoutY="33.0" />
-                            <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
-                        </children>
-                    </AnchorPane>
-                </content>
-            </ScrollPane>
-        </items>
+        <ScrollPane layoutX="-1.0">
+            <VBox fx:id="playerVBox">
+               <Label fx:id="titlePlayerData" underline="true">
+               <padding>
+                   <Insets left="10.0" />
+               </padding></Label>
+               <HBox>
+                   <Label layoutY="31.0" prefWidth="50.0" text="Turn No." />
+                   <Label fx:id="turnNumber" text="0" />
+               </HBox>
+               <HBox>
+                   <Label fx:id="player1" text="Player" />
+                   <Label fx:id="notAvailable" text="N/A" />
+               </HBox>
+            </VBox>
+        </ScrollPane>
+        <ScrollPane layoutX="1.0" layoutY="5.0">
+            <AnchorPane>
+                <Label fx:id="initInfoGame" layoutY="33.0" />
+                <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
+            </AnchorPane>
+        </ScrollPane>
       </SplitPane>
    </right>
 </BorderPane>
