--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="541.0" minWidth="800.0" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
+<BorderPane minHeight="241" minWidth="500" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.Controller.Controller">
    <top>
       <Label text="Wordiada" BorderPane.alignment="CENTER">
          <font>
@@ -32,7 +33,7 @@
                <VBox.margin>
                   <Insets />
                </VBox.margin></Button>
-            <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
+            <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#diceThrow" prefHeight="30.0" prefWidth="110.0" text="Make a move">
                <VBox.margin>
                   <Insets />
                </VBox.margin></Button>
@@ -69,7 +70,10 @@
                               <Label fx:id="turnNumber" layoutX="59.0" layoutY="31.0" text="0" />
                               <Label fx:id="player1" layoutX="5.0" layoutY="52.0" text="Player" />
                               <Label fx:id="NotAviable" layoutX="50.0" layoutY="52.0" text="N/A" />
-                              <Label fx:id="titlePlayerData" layoutX="8.0" layoutY="4.0" underline="true" />
+                              <Label fx:id="titlePlayerData" layoutX="8.0" layoutY="4.0" underline="true">
+                                 <effect>
+                                    <ColorAdjust brightness="0.27" contrast="1.0" />
+                                 </effect></Label>
                            </children>
                       </AnchorPane>
                     </content>
@@ -83,7 +87,10 @@
                       <AnchorPane>
                            <children>
                               <Label fx:id="initInfoGame" layoutY="33.0" />
-                              <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" />
+                              <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true">
+                                 <effect>
+                                    <ColorAdjust brightness="0.27" contrast="1.0" />
+                                 </effect></Label>
                            </children>
                         </AnchorPane>
                      </content>
