--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -37,7 +37,7 @@
            <VBox.margin>
               <Insets />
            </VBox.margin></Button>
-        <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="Make a move">
+        <Button fx:id="moveButton" disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#makeMove" prefHeight="30.0" prefWidth="110.0" text="Make a move">
            <VBox.margin>
               <Insets />
            </VBox.margin></Button>
@@ -84,7 +84,7 @@
         <ScrollPane layoutX="1.0" layoutY="5.0">
             <AnchorPane>
                 <Label fx:id="initInfoGame" layoutY="33.0" />
-                <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true" >
+                <Label fx:id="titleInfoGame" layoutX="12.0" prefHeight="21.0" textAlignment="CENTER" underline="true">
                   <effect>
                       <ColorAdjust brightness="0.27" contrast="1.0" />
                   </effect></Label>
