--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -41,13 +41,14 @@
            <VBox.margin>
               <Insets />
            </VBox.margin></Button>
-         <Button fx:id="buildWord" disable="true" mnemonicParsing="false" onAction="#buildWord" prefHeight="31.0" prefWidth="109.0" text="Build a Word" />
-         <Button fx:id="checkWord" disable="true" mnemonicParsing="false" onAction="#checkWord" prefHeight="31.0" prefWidth="110.0" text="Check Word" />
+        <Button fx:id="buildWord" disable="true" mnemonicParsing="false" onAction="#buildWord" prefHeight="31.0" prefWidth="109.0" text="Build a Word" />
+        <Button fx:id="checkWord" disable="true" mnemonicParsing="false" onAction="#checkWord" prefHeight="31.0" prefWidth="110.0" text="Check Word" />
         <Button fx:id="exitButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exitGame" prefHeight="30.0" prefWidth="110.0" text="Exit">
            <VBox.margin>
               <Insets />
            </VBox.margin>
         </Button>
+        <Button fx:id="helpButton" />
       </VBox>
    </left>
    <center>
@@ -78,10 +79,12 @@
                    <Label text="Turn No." />
                    <Label fx:id="turnNumber" text="0" />
                </HBox>
+               <!--
                <HBox spacing="5.0">
                    <Label fx:id="player1" text="Player" />
                    <Label fx:id="notAvailable" text="N/A" />
                </HBox>
+               -->
                <VBox fx:id="playerVBox" />
             </VBox>
         </ScrollPane>
