--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -41,7 +41,7 @@
            <VBox.margin>
               <Insets />
            </VBox.margin></Button>
-        <Button fx:id="buildWord" disable="true" mnemonicParsing="false" onAction="#buildWord" prefHeight="31.0" prefWidth="109.0" text="Build a Word" />
+        <Button fx:id="buildWord" disable="true" mnemonicParsing="false" onAction="#buildWord" prefHeight="31.0" prefWidth="110.0" text="Build a Word" />
         <Button fx:id="checkWord" disable="true" mnemonicParsing="false" onAction="#checkWord" prefHeight="31.0" prefWidth="110.0" text="Check Word" />
         <Button fx:id="exitButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exitGame" prefHeight="30.0" prefWidth="110.0" text="Exit">
            <VBox.margin>
@@ -52,16 +52,43 @@
       </VBox>
    </left>
    <center>
-      <ScrollPane fx:id="boardScrollPane" minHeight="10.0" minWidth="20.0" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
-        <GridPane fx:id="boardPane">
-          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-          </columnConstraints>
-          <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-          </rowConstraints>
-        </GridPane>
-      </ScrollPane>
+       <VBox>
+          <ScrollPane fx:id="boardScrollPane" BorderPane.alignment="CENTER">
+            <GridPane fx:id="boardPane">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+          </ScrollPane>
+         <GridPane alignment="BOTTOM_CENTER" minHeight="55.0" prefHeight="55.0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Label text="Turn No." />
+               <Label fx:id="turnNumberLabel" text="0" GridPane.columnIndex="1" />
+               <Label text="Try No." GridPane.rowIndex="2" />
+               <Label fx:id="tryNumberLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <Label text="Total tries" GridPane.rowIndex="1" />
+               <Label fx:id="totalTriesLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <Label text="Word:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+               <Label fx:id="buildWordLabel" text="word" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            </children>
+         </GridPane>
+       </VBox>
    </center>
    <right>
       <SplitPane dividerPositions="0.5" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="360.0" prefWidth="227.0" BorderPane.alignment="CENTER">
@@ -75,16 +102,16 @@
                        <ColorAdjust brightness="0.27" contrast="1.0" />
                    </effect>
                </Label>
-               <HBox spacing="5.0">
-                   <Label text="Turn No." />
-                   <Label fx:id="turnNumber" text="0" />
-               </HBox>
-               <!--
-               <HBox spacing="5.0">
-                   <Label fx:id="player1" text="Player" />
-                   <Label fx:id="notAvailable" text="N/A" />
-               </HBox>
-               -->
+                <!--
+                <HBox spacing="5.0">
+                    <Label text="Turn No." />
+                    <Label fx:id="turnNumber" text="0" />
+                </HBox>
+                <HBox spacing="5.0">
+                    <Label fx:id="player1" text="Player" />
+                    <Label fx:id="notAvailable" text="N/A" />
+                </HBox>
+                -->
                <VBox fx:id="playerVBox" />
             </VBox>
         </ScrollPane>
