--- a/DesktopUI/src/desktopUI/userInfo/UserInfo.fxml
+++ b/DesktopUI/src/desktopUI/userInfo/UserInfo.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox alignment="CENTER" spacing="3.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.userInfo.UserInfoController">
+<HBox fx:id="userInfoHBox" alignment="CENTER" spacing="3.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktopUI.userInfo.UserInfoController">
   <Label fx:id="nameLabel" text="name" />
   <Label text="ID:" />
   <Label fx:id="idLabel" text="ID#" />
