--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -50,8 +50,8 @@
         <Button fx:id="helpButton" onAction="#endOfGameStatus" text="?" />
          <Button fx:id="newGameButton" mnemonicParsing="false" text="New Game" visible="false" />
          <Button fx:id="playAgainButton" mnemonicParsing="false" text="Play Again" visible="false" />
-         <Button fx:id="prevButton" mnemonicParsing="false" text="Prev" visible="false" />
-         <Button fx:id="nextButton" mnemonicParsing="false" text="Next" visible="false" />
+         <Button fx:id="prevButton" mnemonicParsing="false" text="Prev" onAction="#prev" visible="false" />
+         <Button fx:id="nextButton" mnemonicParsing="false" text="Next" onAction="#next" visible="false" />
       </VBox>
    </left>
    <center>
