--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -56,17 +56,17 @@
    </left>
    <center>
        <VBox>
-          <ScrollPane fx:id="boardScrollPane" prefHeight="542.0" prefWidth="443.0" BorderPane.alignment="CENTER">
-            <GridPane fx:id="boardPane">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-          </ScrollPane>
-         <GridPane alignment="BOTTOM_CENTER" minHeight="55.0" prefHeight="55.0">
+         <ScrollPane fx:id="boardScrollPane" minHeight="450.0" minWidth="443.0" BorderPane.alignment="CENTER">
+           <GridPane fx:id="boardPane">
+             <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+             </columnConstraints>
+             <rowConstraints>
+               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+             </rowConstraints>
+           </GridPane>
+         </ScrollPane>
+         <GridPane alignment="BOTTOM_CENTER" minHeight="55.0" maxHeight="60.0" prefHeight="55.0">
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -78,20 +78,18 @@
              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
            </rowConstraints>
-            <children>
-               <Label style="-fx-strikethrough: true" text="Turn No." />
-               <Label fx:id="turnNumberLabel" text="0" GridPane.columnIndex="1" />
-               <Label text="Try No." GridPane.rowIndex="2" />
-               <Label fx:id="tryNumberLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-               <Label text="Total tries" GridPane.rowIndex="1" />
-               <Label fx:id="totalTriesLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               <Label text="Dice value:" GridPane.columnIndex="2" />
-               <Label fx:id="diceValueLabel" GridPane.columnIndex="3" />
-               <Label text="Word:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-               <Label fx:id="buildWordLabel" text="word" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            </children>
+           <Label text="Turn No." />
+           <Label fx:id="turnNumberLabel" text="0" GridPane.columnIndex="1" />
+           <Label text="Try No." GridPane.rowIndex="2" />
+           <Label fx:id="tryNumberLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+           <Label text="Total tries" GridPane.rowIndex="1" />
+           <Label fx:id="totalTriesLabel" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+           <Label text="Dice value:" GridPane.columnIndex="2" />
+           <Label fx:id="diceValueLabel" GridPane.columnIndex="3" />
+           <Label text="Word:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+           <Label fx:id="buildWordLabel" text="word" GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </GridPane>
        </VBox>
    </center>
