--- a/DesktopUI/src/desktopUI/desktopUI.fxml
+++ b/DesktopUI/src/desktopUI/desktopUI.fxml
@@ -47,7 +47,7 @@
               <Insets />
            </VBox.margin>
         </Button>
-        <Button fx:id="helpButton" onAction="#endOfGameStatus" text="?" />
+        <Button fx:id="helpButton" onAction="#help" text="?" />
         <Button fx:id="newGameButton" mnemonicParsing="false" text="New Game" onAction="#loadNewXmlFile" visible="false" />
         <Button fx:id="playAgainButton" mnemonicParsing="false" text="Play Again" onAction="#playAgain" visible="false" />
         <Button fx:id="prevButton" mnemonicParsing="false" text="Prev" onAction="#prev" visible="false" />
