--- a/WebUI/web/css/gameRoom.css
+++ b/WebUI/web/css/gameRoom.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../../../לימודים/IdeaProjects/Wordiada/WebUI/web/images/gameBG.png");
+    background-image: url("../images/wordiada.jpg");
     font-family: 'Shadows Into Light', cursive;
 }
 
