--- a/WebUI/web/css/login.css
+++ b/WebUI/web/css/login.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("../../../../לימודים/IdeaProjects/Wordiada/WebUI/web/images/gameBG.png");
+    background-image: url("../images/wordiada.jpg")Pi;
     font-family: 'Shadows Into Light', cursive;}
 
 #loginTitle {
