--- a/WebUI/web/css/lobby.css
+++ b/WebUI/web/css/lobby.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("../../../../לימודים/IdeaProjects/Wordiada/WebUI/web/images/gameBG.png");
+    background-image: url("../images/wordiada.jpg");
     font-family: 'Shadows Into Light', cursive;
 }
 
