2 more cols added

--- a/WebUI/web/css/login.css
+++ b/WebUI/web/css/login.css
@@ -7,7 +7,7 @@ body {
     font-size: 4em;
     text-align: center;
     color: #660033;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Arial', cursive;
     margin: 2% 0;
 }
 
