--- a/WebUI/web/css/lobby.css
+++ b/WebUI/web/css/lobby.css
@@ -1,7 +1,7 @@
 
 body {
     background-image: url("../images/wordiada.jpg");
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Ariel', cursive;
 }
 
 #chatarea{
