--- a/WebUI/web/css/gameRoom.css
+++ b/WebUI/web/css/gameRoom.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../images/wordiada.jpg");
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Ariel', cursive;
 }
 
 .section {
