--- a/WebUI/web/css/login.css
+++ b/WebUI/web/css/login.css
@@ -1,7 +1,7 @@
 
 body {
     background-image: url("../images/wordiada.jpg")Pi;
-    font-family: 'Shadows Into Light', cursive;}
+    font-family: 'Ariel', cursive;}
 
 #loginTitle {
     font-size: 4em;
